--- a/docs/docker/nginx.conf
+++ b/docs/docker/nginx.conf
@@ -55,6 +55,13 @@ http {
         gzip_vary on;
 
         location ^~ /api/ {
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+            add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
             rewrite ^/api(.*) $1 break;
             proxy_pass http://127.0.0.1:9001;
 		    proxy_read_timeout 180s;
