--- a/spug_web/public/manifest.json
+++ b/spug_web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Spug",
-  "name": "Spug",
+  "short_name": "Giraffe",
+  "name": "Giraffe",
   "icons": [
     {
       "src": "favicon.ico",
