--- a/docs/docker/Dockerfile.base
+++ b/docs/docker/Dockerfile.base
@@ -1,4 +1,4 @@
-FROM yiluxiangbei/giraffe-base:v1.0
+FROM centos:7.8.2003
 
 ENV TZ=Asia/Shanghai
 RUN yum install -y epel-release https://packages.endpointdev.com/rhel/7/os/x86_64/endpoint-repo.x86_64.rpm && yum install -y --setopt=tsflags=nodocs nginx redis mariadb-server mariadb-devel python36 python36-devel openldap-devel supervisor git gcc wget sshpass && yum -y clean all --enablerepo='*'
