--- a/docs/docker/nginx.conf
+++ b/docs/docker/nginx.conf
@@ -42,7 +42,7 @@ http {
         server_name  _;
         root         /data/spug/spug_web/build;
 
-	    client_max_body_size	100m;
+	    client_max_body_size 2g;
         add_header   X-Frame-Options SAMEORIGIN always;
 
         gzip  on;
